index html file updated

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,6 +13,6 @@
 <body>
     <div id="app" class="container"></div>
 
-    <script type="text/babel" src="app.js"></script>
+    <script type="text/babel" src="src/components/App.js"></script>
 </body>
 </html>
